<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="nd_apps">My Nanodegree Apps!</string>
    <string name="movies">Popular Movies</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="bigger">Build It Bigger</string>
    <string name="xyz">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>

    <string name="button_will_launch">This button will launch %s!</string>
    <string name="app_not_installed">You don\'t have this application installed.</string>
</resources>
