<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.demons.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nd_apps"
            android:textColor="@color/colorAccent"
            android:textSize="24dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="36dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/movies"
                style="@style/Button"
                android:text="@string/movies" />

            <Button
                android:id="@+id/scores"
                style="@style/Button"
                android:text="@string/scores" />

            <Button
                android:id="@+id/library"
                style="@style/Button"
                android:text="@string/library" />

            <Button
                android:id="@+id/bigger"
                style="@style/Button"
                android:text="@string/bigger" />

            <Button
                android:id="@+id/xyz"
                style="@style/Button"
                android:text="@string/xyz" />

            <Button
                android:id="@+id/capstone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:paddingLeft="36dp"
                android:paddingRight="36dp"
                android:text="@string/capstone"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
